--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run integration test
+        working-directory: ./backend
         run: mvn integration-test "${GITHUB_WORKSPACE}/backend/pom.xml"
       - name: Heroku bash
         run: |  
