--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run integration test
         working-directory: ./backend
         run: mvn integration-test
-      - name: Heroku bash
+      - name: Heroku upload
         run: |  
           export JAVA_HOME=JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/21.0.1-12/x64
           sudo chmod +x "${GITHUB_WORKSPACE}/cicd/deploy.sh"
