Add heroku database config

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=szakal-backend
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+database.url=${DATABASE_URL}
+database.username=${DATABASE_USERNAME}
+database.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
