--- a/backend/src/integration-test/resources/application.properties
+++ b/backend/src/integration-test/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=szakal-backend
+#spring.main.allow-bean-definition-overriding=true
+
 
 spring.datasource.driverClassName=org.postgresql.Driver
 
