--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -6,13 +6,13 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Branch Validation Workflow
 
 on:
   push:
-    branches: [ "!master" ]
+    branches: [ "!master", "*"]
   pull_request:
-    branches: [ "!master" ]
+    branches: [ "!master", "*" ]
 
 jobs:
   build:
