Change build system to gradle, improve documentation

--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -33,5 +33,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run integration test
         working-directory: ./backend
-        run: mvn integration-test
+        run: ./gradlew integrationTest
 
