--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-          cache: maven
+          cache: gradle
       - uses: docker-practice/actions-setup-docker@master
         timeout-minutes: 12
 
