Add gradle stage task required by heroku

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -77,6 +77,10 @@ tasks.register('integrationTest', Test) {
     useJUnitPlatform()
 }
 
+tasks.register("stage") {
+
+}
+
 bootRun {
     if (project.hasProperty('databaseUrl')) {
         systemProperty 'DATABASE_URL', databaseUrl
