Don't generate plain jar to not confuse heroku

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -117,3 +117,7 @@ tasks.withType(Test).configureEach {
 tasks.withType(JavaExec).configureEach {
     jvmArgs += "--enable-preview"
 }
+
+jar {
+    enabled = false
+}
