Add profile pictures

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,7 @@ jwt.secret=${JWT_SECRET}
 jwt.issuer=szakal_app
 jwt.auth-expiration-time=100000
 jwt.refresh-expiration-time=10000000000
+
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
+server.tomcat.max-swallow-size=500KB
