--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,6 @@ jwt.refresh-expiration-time=10000000000
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 server.tomcat.max-swallow-size=500KB
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
