--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.servlet.multipart.max-file-size=5000KB
 spring.servlet.multipart.max-request-size=5000KB
 server.tomcat.max-swallow-size=5000KB
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
