--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,8 +7,8 @@ database.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch = true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.mvc.throw-exception-if-no-handler-found=true
 
 jwt.secret=${JWT_SECRET}
 jwt.issuer=szakal_app
@@ -18,6 +18,5 @@ jwt.refresh-expiration-time=10000000000
 spring.servlet.multipart.max-file-size=5000KB
 spring.servlet.multipart.max-request-size=5000KB
 server.tomcat.max-swallow-size=5000KB
-
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
