--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "testJest": "jest"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^13.15.1",
     "jest": "^27.5.1"
   }
 }
