--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,23 @@ jobs:
       - name: Run integration test
         working-directory: ./backend
         run: ./gradlew integrationTest
+
+      - name: Remove wrong java versions
+        working-directory: ./
+        run: sudo apt remove temurin-8-jdk temurin-11-jdk
+
+      - name: Set up env
+        working-directory: ./
+        run: sudo bash ./setup-env.sh
+
+      - name: Run cypress tests
+        working-directory: ./frontend
+        run: CYPRESS_CACHE_FOLDER=./tmp/Cypress sudo npx cypress install --force && sudo npx cypress run --browser chrome
+
+      - name: Destroy env
+        working-directory: ./
+        run: sudo bash ./backend/run-backend.sh stop
+
       - name: Heroku upload
         run: |  
           export JAVA_HOME=JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/21.0.1-12/x64
