--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -6,6 +6,11 @@
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "szakal_logo.svg",
+      "sizes": "128x128 144x144 192x192 256x256 512x512",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
