--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@
 .idea/**/dbnavigator.xml
 
 # Gradle
-.idea/**/libraries
+#.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
