Fix gradle building with multi level project in pipelines

--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -33,7 +33,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run integration test
         working-directory: ./backend
-        run: ./gradlew integrationTest
+        run: ./gradlew :backend:integrationTest
 
   cypressTests:
 
