--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run integration test
         working-directory: ./backend
-        run: ./gradlew integrationTest
+        run: ./gradlew :backend:integrationTest
 
       - name: Remove wrong java versions
         working-directory: ./
