--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run integration test
-        working-directory: ./backend
+        working-directory: ./
         run: ./gradlew :backend:integrationTest
 
       - name: Remove wrong java versions
