--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -10,9 +10,12 @@ name: Branch Validation Workflow
 
 on:
   push:
-    branches: [ "!master", "*"]
+    branches:
+      - '**'
+      - '!master'
   pull_request:
-    branches: [ "!master", "*" ]
+    branches:
+      - 'master'
 
 jobs:
   integrationTests:
@@ -33,7 +36,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run integration test
         working-directory: ./
-        run: ./gradlew :backend:integrationTest
+        run: chmod +x gradlew && ./gradlew :backend:integrationTest
 
   cypressTests:
 
