--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ database.username=${DATABASE_USERNAME}
 database.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch = true
 jwt.secret=${JWT_SECRET}
 jwt.issuer=szakal_app
