--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,9 @@
     "vite-plugin-svgr": "^4.3.0",
     "web-vitals": "^4.2.4"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "scripts": {
     "start": "vite",
     "build": "vite build",
