214 Add auto refresh to summary, companies and journeys lists and details

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation libs.org.springframework.boot.spring.boot.starter.jdbc
     implementation libs.org.springframework.boot.spring.boot.starter.security
     implementation libs.org.springframework.boot.spring.boot.starter.web
+    implementation libs.org.springframework.boot.spring.boot.starter.websocket
     implementation libs.org.springframework.boot.spring.boot.starter.mail
     implementation libs.org.springframework.boot.spring.boot.configuration.processor
     implementation libs.org.projectlombok.lombok
