--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -21,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
+    "sockjs-client": "^1.6.1",
     "uuid": "^11.0.5",
     "vite": "^6.0.11",
     "vite-plugin-svgr": "^4.3.0",
