--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,21 +38,17 @@ jobs:
         working-directory: ./
         run: chmod +x gradlew && ./gradlew :backend:integrationTest
 
-      - name: Remove wrong java versions
-        working-directory: ./
-        run: sudo apt remove temurin-8-jdk temurin-11-jdk
-
       - name: Set up env
         working-directory: ./
-        run: sudo bash ./setup-env-java.sh true
+        run: sudo bash ./setup-env-docker.sh
+
+      - name: Install node modules
+        working-directory: ./frontend
+        run: npm install
 
       - name: Run cypress tests
         working-directory: ./frontend
         run: CYPRESS_CACHE_FOLDER=./tmp/Cypress sudo npx cypress install --force && sudo npx cypress run --browser chrome
-
-      - name: Destroy env
-        working-directory: ./
-        run: sudo bash ./backend/run-backend.sh stop
 
       - name: Heroku upload
         run: |  
