--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,13 +46,13 @@ jobs:
         working-directory: ./frontend
         run: npm install
 
-      - name: Setup tmate session
-        if: success() || failure()
-        uses: mxschmitt/action-tmate@v3
+      #      - name: Setup tmate session
+      #        if: success() || failure()
+      #        uses: mxschmitt/action-tmate@v3
 
       - name: Run cypress tests
         working-directory: ./frontend
-        run: CYPRESS_CACHE_FOLDER=./tmp/Cypress sudo npx cypress install --force && sudo npx cypress run --browser chrome
+        run: DEBUG=cypress:* CYPRESS_CACHE_FOLDER=./tmp/Cypress sudo npx cypress install --force && sudo npx cypress run --browser chrome
 
       - name: Build frontend
         working-directory: ./
