Fix cypress testing (#274)
* Reload data not restart database

* Install psql in main flow

* Fix unchecked cast in authentication provider

--- a/.github/workflows/branch-validation.yml
+++ b/.github/workflows/branch-validation.yml
@@ -50,6 +50,10 @@ jobs:
       - uses: docker-practice/actions-setup-docker@master
         timeout-minutes: 12
 
+      - name: Install psql
+        working-directory: ./
+        run: sudo apt install postgresql-client-common && sudo apt install postgresql-client-14
+
       - name: Set up env
         working-directory: ./
         run: sudo bash ./setup-env-docker.sh
