--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id("com.javiersc.semver") version "0.8.0"
 }
 
-tasks.register('updateVersionInFiles') {
-
+tasks.register('updateVersionInFiles', Exec) {
+    commandLine 'bash', './cicd/updateVersionInFrontend.sh'
 }
+
