Fetch tags for proper versioning

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
         timeout-minutes: 12
 
       - name: Get tags
+        working-directory: ./
         run: git fetch --tags origin
 
       - name: Run semver
