--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-VITE_REACT_APP_BACKEND_URL=http://localhost:8080/api
+VITE_REACT_APP_BACKEND_URL=https://refactored-fishstick-j4q959qpp4h5gx9-8080.app.github.dev/api
 VITE_SZAKAL_VERSION=1.0.1
