--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch = true
 jwt.secret=${JWT_SECRET}
+jwt.push-private-key=${PUSH_PRIVATE_KEY}
+jwt.push-public-key=${PUSH_PUBLIC_KEY}
 jwt.issuer=szakal_app
 jwt.auth-expiration-time=100000
 jwt.refresh-expiration-time=10000000000
