Change image to correcto Openjdk is not supported anymore

--- a/cicd/Dockerfile
+++ b/cicd/Dockerfile
@@ -23,7 +23,7 @@ RUN dos2unix gradlew \
 && chmod +x ./gradlew \
 && ./gradlew build
 
-FROM openjdk:21
+FROM amazoncorretto:21
 COPY --from=codebuilder /src/backend/build/libs/backend-1.0.0.jar  szakal.jar
 
 EXPOSE 8080
