--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,3 @@
 VITE_REACT_APP_BACKEND_URL=http://localhost:8080/api
 VITE_SZAKAL_VERSION=1.3.7
+PUSH_PUBLIC_KEY=BN559_Wo-kImGW_sdx-ksLO6UizTfjMORSo1Ku4Ge3dd5YTgR-NceGY7_q_5E8krfdNbNg10207MDUPoGeNYG-s
